--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1018,7 +1018,12 @@
                     "errorGetFeatureInfo": "Das Polygon konnte aus dem Layer nicht ausgelesen werden.",
                     "errorNoLayerFound": "An diesem Ort befindet sich kein gültiger Layer. Bitte versuchen Sie es erneut.",
                     "errorNoPolygonChosen": "Das gewählte Feature ist kein Polygon. Bitte wählen Sie ein Polygon.",
-                    "errorFleetRouting" : "Die Anfrage für Flottenrouting ist fehlgeschlagen. Bitte versuchen Sie es (später) erneut."
+                    "errorFleetRouting" : "Die Anfrage für Flottenrouting ist fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
+                    "addJobContextText": "Neues Ziel hinzufügen",
+                    "addVehicleContextText": "Neues Fahrzeug hinzufügen",
+                    "setCurrentJobContextText": "Als aktuelles Ziel setzen",
+                    "setCurrentVehicleStartContextText": "Als aktuellen Startort setzen",
+                    "setCurrentVehicleEndContextText": "Als aktuellen Zielort setzen"
                 }
             }
         }
