--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -968,20 +968,7 @@
                     "routingSummaryDetailsButton": "Details",
                     "profileCarText": "Driving",
                     "profileBycicleText": "Cycling",
-                    "profileWalkingText": "Walking",
-                    "addAvoidArea": "Avoid area",
-                    "uploadGeoJson": "Load GeoJSON",
-                    "deleteAvoidArea": "Delete avoid area",
-                    "drawAvoidArea": "Draw area",
-                    "selectAvoidAreaFromLayer": "Select from layer",
-                    "errorFileUpload": "Could not load file. Please make sure the file is valid and try again.",
-                    "errorUploadedGeometryType": "The uploaded GeoJSON must be a polygon.",
-                    "errorTooManyFeatures": "The upload of multiple features is not supported. Please upload a single feature." ,
-                    "errorUploadedFileExtension": "Unsupported filetype. Please load a '.json' or '.geojson' file.",
-                    "errorZeroFeatures": "The uploaded GeoJSON does not contain features. Please upload one feature.",
-                    "errorGetFeatureInfo": "The polygon could not be read from the layer.",
-                    "errorNoLayerFound": "No valid layer found at selected location. Please try again.",
-                    "errorNoPolygonChosen": "The selected feature is not a polygon. Please select a polygon."
+                    "profileWalkingText": "Walking"
                 }
             }
         }
@@ -1001,9 +988,22 @@
                     "profileCarText": "Driving",
                     "profileBycicleText": "Cycling",
                     "profileWalkingText": "Walking",
+                    "addJobContextText": "Add new target",
+                    "addVehicleContextText": "Add new vehicle",
+                    "setCurrentJobContextText": "Set as current target",
+                    "setCurrentVehicleStartContextText": "Set as current starting location",
+                    "setCurrentVehicleEndContextText": "Set as current ending location"
+                }
+            }
+        }
+    },
+    "Koala.view.button.AvoidArea": {
+        "config": {
+            "data": {
+                "i18n": {
                     "addAvoidArea": "Avoid area",
                     "uploadGeoJson": "Load GeoJSON",
-                    "deleteAvoidArea": "Delete avoid area",
+                    "deleteAvoidArea": "Delete area",
                     "drawAvoidArea": "Draw area",
                     "selectAvoidAreaFromLayer": "Select from layer",
                     "errorFileUpload": "Could not load file. Please make sure the file is valid and try again.",
@@ -1013,12 +1013,7 @@
                     "errorZeroFeatures": "The uploaded GeoJSON does not contain features. Please upload one feature.",
                     "errorGetFeatureInfo": "The polygon could not be read from the layer.",
                     "errorNoLayerFound": "No valid layer found at selected location. Please try again.",
-                    "errorNoPolygonChosen": "The selected feature is not a polygon. Please select a polygon.",
-                    "addJobContextText": "Add new target",
-                    "addVehicleContextText": "Add new vehicle",
-                    "setCurrentJobContextText": "Set as current target",
-                    "setCurrentVehicleStartContextText": "Set as current starting location",
-                    "setCurrentVehicleEndContextText": "Set as current ending location"
+                    "errorNoPolygonChosen": "The selected feature is not a polygon. Please select a polygon."
                 }
             }
         }
