add no breaks info

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -650,7 +650,8 @@
             "data": {
                 "i18n": {
                     "title": "Pausen",
-                    "addBreakTooltip": "Pause hinzufügen"
+                    "addBreakTooltip": "Pause hinzufügen",
+                    "noBreaksText": "Keine Pausen angelegt"
                 }
             }
         }
