minor UI adjustments

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -983,7 +983,7 @@
         "config": {
             "data": {
                 "i18n": {
-                    "fleetRoutingTitle": "Flotten Routing",
+                    "fleetRoutingTitle": "Flottenrouting",
                     "computeFleetRoutingButtonText": "Routen berechnen",
                     "elevationBtnText": "Höhenprofil",
                     "downloadButtonText": "Download",
